--- a/econ_chat.html
+++ b/econ_chat.html
@@ -1,39 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Embedded Streamlit App</title>
   <style>
-    /* Remove all margins and make html/body fill the window */
     html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      width: 100%;
-      overflow: hidden;  /* Hide the wrapper’s scrollbars */
+      margin:0; padding:0;
+      height:100%; width:100%;
+      overflow:hidden;
     }
-    /* Pin this container to cover the entire viewport */
     .iframe-container {
-      position: fixed;
-      top:   0;
-      left:  0;
-      right: 0;
-      bottom:0;
+      position:fixed;
+      top:0; left:0; right:0; bottom:0;
     }
-    /* Make the iframe fill that container */
-    .iframe {
-      width:  100%;
-      height: 100%;
-      border: none;
+    .iframe-container iframe {
+      width:100%; height:100%; border:none;
     }
   </style>
 </head>
 <body>
   <div class="iframe-container">
     <iframe
-      src="https://econchat.streamlit.app/?embed=true"
-      class="iframe"
+      src="https://econchat-proxy.yourdomain.workers.dev/"
+      sandbox="allow-scripts allow-same-origin allow-forms"
+      allow="clipboard-read; clipboard-write"
     ></iframe>
   </div>
 </body>
